# ff-notifier

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-entrypoint.sh  pyproject.toml  run.py
docs/: NOTIFIER_REFERENCE.md
src/: __init__.py  config.py  logger.py  main.py  xray_config.py
src/application/: __init__.py
src/application/interfaces/: __init__.py  email_sender.py  metrics_sink.py  pdf_renderer.py  pdf_store.py  tracing.py
src/application/use_cases/: process_fare_result_use_case.py
src/domain/: __init__.py
src/domain/entities/: __init__.py  fare_result.py  notification_event.py
src/domain/enums/: __init__.py  fare_result_status.py
src/domain/value_objects/: email_recipient.py  pdf_report.py  qr_payload.py
src/infrastructure/: __init__.py
src/infrastructure/dedup/: __init__.py  dedup_store.py
src/infrastructure/messaging/: __init__.py  notifications_sqs_consumer.py  sqs_consumer.py
src/infrastructure/pdf/: __init__.py  pdf_generator.py
src/presentation/: __init__.py
src/presentation/schemas/: __init__.py  fare_event_schema.py  health_response_schema.py  metrics_response_schema.py
src/shared/: __init__.py  notifier_helpers.py
src/templates/: audit_executive.html  template-reservation.html
src/templates/documents/: template-reservation-aller-retour.html  template-reservation-aller-simple.html
src/templates/emails/: error_email.html  parsing_error_email.html  success_email.html
src/templates/notifications/: template-demande-intraitable-parse-impossible.html  template-demande-intraitable-poison-message.html  template-demande-intraitable-tier1-hard.html  template-support-alerte-expediteur-introuvable.html  template-support-alerte-incident-serveur.html  (+1 more)
tests/: conftest.py
tests/unit/: test_consumer.py  test_main.py  test_notification_event_schema.py  test_notification_templates_contract.py  test_notifications_consumer.py  test_pdf_generation.py  test_pdf_reservation_documents_generation.py  test_template_reservation.py  test_use_case.py
